# antd_to_html

./: Dockerfile  README.md  env.example  package.json  prompt.md  pyproject.toml  redeploy.sh  schema.sql
examples/: basic.json
scripts/: run_crud_tests.py  test_db.py
src/: cli.js  index.js  layout.js  mappers.js  render.js  schema.js  server.js  utils.js
src/antd_to_html/: __init__.py  app.py  config.py  db.py  ids.py  models.py  render.py  repositories.py  schema_validator.py  submit_script.py
src/antd_to_html/api/: __init__.py  instances.py  runtime.py  templates.py
src/antd_to_html_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/renderers/: formList.js
src/scripts/: submit.js
tests/: test_render.py
